tests/duarouter/alternatives/style2_input/errors/routealt/routealt_last_false/errors.duarouter
Error: Attribute 'last' in definition of routeDistribution '!1' Invalid Number Format (long long integer format) xxx.
Quitting (on error).
